Fix hotel icon alignment

--- a/css/Components/Location.scss
+++ b/css/Components/Location.scss
@@ -50,6 +50,7 @@ $Location-priceValue-font-family: "matrix-ii";
   top: 4px;
   content: '';
   background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
